--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: rrules_generator
 description: A new Flutter package project.
 version: 0.0.1
-homepage:
+homepage: https://github.com/TejasAnghan/rrules_generator
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
