--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: rrules_generator
-description: A new Flutter package project.
+description: rrules_generator is a flutter plugin which is used for generating the recurrence rules.
 version: 0.0.2
 homepage: https://github.com/TejasAnghan/rrules_generator
 
