--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.17.0
-  rrule: ^0.2.3
+  intl: 0.17.0
+  rrule: 0.2.3
 
 dev_dependencies:
   flutter_test:
